--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+        with:
+          sparse-checkout: true
       - name: setup terraform
         uses: hashicorp/setup-terraform@v2
         with:
