--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -2,6 +2,9 @@ name: terraform
 
 on: push
 
+env:
+  AWS_ACCESS_KEY_ID: {{ secrets.ACCESS-KEY }}
+  AWS_SECRET_ACCESS_KEY: {{ secrets.SECRET-KEY }}
 jobs:
   terraform:
     runs-on: ubuntu-latest
@@ -22,8 +25,8 @@ jobs:
         run: terraform validate
       - name: plan
         run: terraform plan
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        # env:
+          # GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
 
 
