--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -3,8 +3,8 @@ name: terraform
 on: push
 
 env:
-    AWS_ACCESS_KEY_ID: {{ secrets.ACCESS-KEY }}
-    AWS_SECRET_ACCESS_KEY: {{ secrets.SECRET-KEY }}
+    AWS_ACCESS_KEY_ID: {{ secrets.ACCESS_KEY }}
+    AWS_SECRET_ACCESS_KEY: {{ secrets.SECRET_KEY }}
 jobs:
   terraform:
     runs-on: ubuntu-latest
