--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -5,14 +5,15 @@ on: push
 env:
   AWS_ACCESS_KEY_ID: ${{secrets.ACCESS_KEY}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.SECRET_KEY}}
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@v3
-        with:
-          sparse-checkout: true
+        #with:
+          #sparse-checkout: true
       - name: setup terraform
         uses: hashicorp/setup-terraform@v2
         with:
